# chess-style-coach

./: .env.example  .gitignore  pyproject.toml  requirements.txt
src/chess_style_coach/: config.py
src/chess_style_coach/app/: chat_core.py  streamlit_app.py
src/chess_style_coach/coaching/: formatting.py
src/chess_style_coach/engine/: stockfish.py
src/chess_style_coach/llm/: client.py  prompts.py
