[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","B"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-style-coach"
version = "0.1.0"
description = "Assistant d'échecs type ChatGPT avec analyse moteur et explications pédagogiques"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
